# JIMP-II

lab1/doublebasepalindromes/: CMakeLists.txt  doublebasepalindromes.cpp  doublebasepalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  main.cpp  multiplicationtable.cpp  multiplicationtable.h
lab1/palindrome/: CMakeLists.txt  main.cpp  palindrome.cpp  palindrome.h
lab1/reversestring/: CMakeLists.txt  main.cpp  reversestring.cpp  reversestring.h
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp  polybius.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab4/geometry/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp
lab4/netsurl/: main.cpp  netsurl.cpp  netsurl.h
lab5/: CMakeLists.txt
lab5/zad4/: CMakeLists.txt  main.cpp  rodzzina.cpp  rodzzina.h
lab6/: CMakeLists.txt
lab6/Complex/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
lab6/academia/: CMakeLists.txt  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  StudentYear.cpp  StudentYear.h  main.cpp
